test/spec/exception-handling/imports.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/exception-handling/imports.wast
;;; ARGS*: --enable-exceptions
(;; STDOUT ;;;
called host spectest.print_i32(i32:13) =>
called host spectest.print_i32_f32(i32:14, f32:42.000000) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_f32(f32:13.000000) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_f64_f64(f64:25.000000, f64:53.000000) =>
called host spectest.print_f64(f64:24.000000) =>
called host spectest.print_f64(f64:24.000000) =>
called host spectest.print_f64(f64:24.000000) =>
out/test/spec/exception-handling/imports.wast:100: assert_invalid passed:
  0000000: error: function type variable out of range: 1 (max 1)
  000001e: error: OnImportFunc callback failed
called host spectest.print_i32(i32:13) =>
out/test/spec/exception-handling/imports.wast:136: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:140: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/exception-handling/imports.wast:145: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:149: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:153: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:157: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:161: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:165: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:169: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:173: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:177: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:181: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:185: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:189: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:193: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:197: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:201: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:205: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:210: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind func, not global
out/test/spec/exception-handling/imports.wast:214: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind func, not table
out/test/spec/exception-handling/imports.wast:218: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind func, not memory
out/test/spec/exception-handling/imports.wast:222: assert_unlinkable passed:
  error: expected import "test.tag" to have kind func, not tag
out/test/spec/exception-handling/imports.wast:226: assert_unlinkable passed:
  error: expected import "spectest.global_i32" to have kind func, not global
out/test/spec/exception-handling/imports.wast:230: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind func, not table
out/test/spec/exception-handling/imports.wast:234: assert_unlinkable passed:
  error: expected import "spectest.memory" to have kind func, not memory
out/test/spec/exception-handling/imports.wast:239: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:243: assert_unlinkable passed:
  error: signature mismatch in imported tag
out/test/spec/exception-handling/imports.wast:247: assert_unlinkable passed:
  error: signature mismatch in imported tag
out/test/spec/exception-handling/imports.wast:251: assert_unlinkable passed:
  error: signature mismatch in imported tag
out/test/spec/exception-handling/imports.wast:255: assert_unlinkable passed:
  error: expected import "test.func-i32" to have kind tag, not func
out/test/spec/exception-handling/imports.wast:290: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:294: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/exception-handling/imports.wast:299: assert_unlinkable passed:
  error: type mismatch in imported global, expected i64 but got i32.
out/test/spec/exception-handling/imports.wast:303: assert_unlinkable passed:
  error: type mismatch in imported global, expected f32 but got i32.
out/test/spec/exception-handling/imports.wast:307: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got i32.
out/test/spec/exception-handling/imports.wast:311: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected immutable but got mutable.
out/test/spec/exception-handling/imports.wast:315: assert_unlinkable passed:
  error: type mismatch in imported global, expected i32 but got f32.
out/test/spec/exception-handling/imports.wast:319: assert_unlinkable passed:
  error: type mismatch in imported global, expected i64 but got f32.
out/test/spec/exception-handling/imports.wast:323: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got f32.
out/test/spec/exception-handling/imports.wast:327: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected immutable but got mutable.
out/test/spec/exception-handling/imports.wast:331: assert_unlinkable passed:
  error: type mismatch in imported global, expected i32 but got i64.
out/test/spec/exception-handling/imports.wast:335: assert_unlinkable passed:
  error: type mismatch in imported global, expected f32 but got i64.
out/test/spec/exception-handling/imports.wast:339: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got i64.
out/test/spec/exception-handling/imports.wast:343: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected mutable but got immutable.
out/test/spec/exception-handling/imports.wast:348: assert_unlinkable passed:
  error: expected import "test.func" to have kind global, not func
out/test/spec/exception-handling/imports.wast:352: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind global, not table
out/test/spec/exception-handling/imports.wast:356: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind global, not memory
out/test/spec/exception-handling/imports.wast:360: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind global, not func
out/test/spec/exception-handling/imports.wast:364: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind global, not table
out/test/spec/exception-handling/imports.wast:368: assert_unlinkable passed:
  error: expected import "spectest.memory" to have kind global, not memory
out/test/spec/exception-handling/imports.wast:387: assert_trap passed: uninitialized table element
out/test/spec/exception-handling/imports.wast:390: assert_trap passed: uninitialized table element
out/test/spec/exception-handling/imports.wast:391: assert_trap passed: undefined table index
out/test/spec/exception-handling/imports.wast:406: assert_trap passed: uninitialized table element
out/test/spec/exception-handling/imports.wast:409: assert_trap passed: uninitialized table element
out/test/spec/exception-handling/imports.wast:410: assert_trap passed: undefined table index
out/test/spec/exception-handling/imports.wast:442: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:446: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/exception-handling/imports.wast:451: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/exception-handling/imports.wast:455: assert_unlinkable passed:
  error: max size (unspecified) larger than declared (20)
out/test/spec/exception-handling/imports.wast:459: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/exception-handling/imports.wast:463: assert_unlinkable passed:
  error: max size (20) larger than declared (18)
out/test/spec/exception-handling/imports.wast:467: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/exception-handling/imports.wast:471: assert_unlinkable passed:
  error: max size (20) larger than declared (15)
out/test/spec/exception-handling/imports.wast:476: assert_unlinkable passed:
  error: expected import "test.func" to have kind table, not func
out/test/spec/exception-handling/imports.wast:480: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind table, not global
out/test/spec/exception-handling/imports.wast:484: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind table, not memory
out/test/spec/exception-handling/imports.wast:488: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind table, not func
out/test/spec/exception-handling/imports.wast:506: assert_trap passed: out of bounds memory access: access at 1000000+4 >= max value 65536
out/test/spec/exception-handling/imports.wast:517: assert_trap passed: out of bounds memory access: access at 1000000+4 >= max value 65536
out/test/spec/exception-handling/imports.wast:520: assert_invalid passed:
  out/test/spec/exception-handling/imports/imports.103.wasm:0000015: error: only one memory block allowed
  0000015: error: OnImportMemory callback failed
out/test/spec/exception-handling/imports.wast:524: assert_invalid passed:
  out/test/spec/exception-handling/imports/imports.104.wasm:0000015: error: only one memory block allowed
  0000015: error: OnMemory callback failed
out/test/spec/exception-handling/imports.wast:528: assert_invalid passed:
  out/test/spec/exception-handling/imports/imports.105.wasm:000000f: error: only one memory block allowed
  000000f: error: OnMemory callback failed
out/test/spec/exception-handling/imports.wast:543: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:547: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/exception-handling/imports.wast:552: assert_unlinkable passed:
  error: actual size (2) smaller than declared (3)
out/test/spec/exception-handling/imports.wast:556: assert_unlinkable passed:
  error: max size (unspecified) larger than declared (3)
out/test/spec/exception-handling/imports.wast:560: assert_unlinkable passed:
  error: actual size (1) smaller than declared (2)
out/test/spec/exception-handling/imports.wast:564: assert_unlinkable passed:
  error: max size (2) larger than declared (1)
out/test/spec/exception-handling/imports.wast:569: assert_unlinkable passed:
  error: expected import "test.func-i32" to have kind memory, not func
out/test/spec/exception-handling/imports.wast:573: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind memory, not global
out/test/spec/exception-handling/imports.wast:577: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind memory, not table
out/test/spec/exception-handling/imports.wast:581: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind memory, not func
out/test/spec/exception-handling/imports.wast:585: assert_unlinkable passed:
  error: expected import "spectest.global_i32" to have kind memory, not global
out/test/spec/exception-handling/imports.wast:589: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind memory, not table
out/test/spec/exception-handling/imports.wast:594: assert_unlinkable passed:
  error: actual size (1) smaller than declared (2)
out/test/spec/exception-handling/imports.wast:598: assert_unlinkable passed:
  error: max size (2) larger than declared (1)
out/test/spec/exception-handling/imports.wast:636: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.133.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (func))
          ^^^^^^
out/test/spec/exception-handling/imports.wast:640: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.134.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (global i64))
          ^^^^^^
out/test/spec/exception-handling/imports.wast:644: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.135.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (table 0 funcref))
          ^^^^^^
out/test/spec/exception-handling/imports.wast:648: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.136.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (memory 0))
          ^^^^^^
out/test/spec/exception-handling/imports.wast:653: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.137.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (func))
                              ^^^^^^
out/test/spec/exception-handling/imports.wast:657: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.138.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (global f32))
                              ^^^^^^
out/test/spec/exception-handling/imports.wast:661: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.139.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (table 0 funcref))
                              ^^^^^^
out/test/spec/exception-handling/imports.wast:665: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.140.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (memory 0))
                              ^^^^^^
out/test/spec/exception-handling/imports.wast:670: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.141.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (func))
                     ^^^^^^
out/test/spec/exception-handling/imports.wast:674: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.142.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (global i32))
                     ^^^^^^
out/test/spec/exception-handling/imports.wast:678: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.143.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (table 0 funcref))
                     ^^^^^^
out/test/spec/exception-handling/imports.wast:682: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.144.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (memory 0))
                     ^^^^^^
out/test/spec/exception-handling/imports.wast:687: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.145.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (func))
              ^^^^^^
out/test/spec/exception-handling/imports.wast:691: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.146.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (global i32))
              ^^^^^^
out/test/spec/exception-handling/imports.wast:695: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.147.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (table 1 3 funcref))
              ^^^^^^
out/test/spec/exception-handling/imports.wast:699: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.148.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (memory 1 2))
              ^^^^^^
out/test/spec/exception-handling/imports.wast:709: assert_unlinkable passed:
  error: invalid import "not wasm.overloaded"
185/185 tests passed.
;;; STDOUT ;;)
